--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="container">
         <div class="header">
             <h1>🧠 Психо Органайзер</h1>
-            <p>Ваши инструменты для саморазвития</p>
+            <p>Мои инструменты для саморазвития</p>
         </div>
 
         <div class="app-grid">
